Implemented cross validation

--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "Text(0.5, 1.0, 'R^2 vs Number of features')"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -667,16 +667,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fec85ca41d0>]"
+       "[<matplotlib.lines.Line2D at 0x7fec84cd2d50>]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -702,16 +702,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fec85bef910>]"
+       "[<matplotlib.lines.Line2D at 0x7fec84d28d10>]"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -737,16 +737,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fec85371dd0>]"
+       "[<matplotlib.lines.Line2D at 0x7fec84b7a7d0>]"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -772,16 +772,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fec8529bf10>]"
+       "[<matplotlib.lines.Line2D at 0x7fec84c0c7d0>]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -807,16 +807,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fec852cff10>"
+       "<matplotlib.legend.Legend at 0x7fec84be7f10>"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -846,16 +846,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fec854d3b50>"
+       "<matplotlib.legend.Legend at 0x7fec84a9ba90>"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -885,16 +885,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fec85147f10>"
+       "<matplotlib.legend.Legend at 0x7fec84957bd0>"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
        "Text(0.5, 0, 'Model')"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
        "Text(0.5, 1.0, 'Number of Features Used by Each Model')"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1235,16 +1235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fec85103050>"
+       "<matplotlib.legend.Legend at 0x7fec85e2ead0>"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1282,7 @@
        "Text(0.5, 0, 'Model')"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1675,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5%"
+    "### Cross Validation to Compute Validity of Conformal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Using cross validation to verify conformal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_validation_conformal(significance_level: float) -> tuple[float, float]:\n",
+    "\t\"\"\"Cross validation to find the optimal alpha value.\n",
+    "\n",
+    "\tArgs:\n",
+    "\t\tsignificance_level (float): significance level (epsilon)\n",
+    "\n",
+    "\tReturns:\n",
+    "\t\ttuple[float, float]: error rate and amplitude\n",
+    "\t\"\"\"\n",
+    "\talpha_values: list[float] = [0.0001, 0.001, 0.01, 0.1, 1, 10, 100, 1000] # create a list of alpha values to test\n",
+    "\tscores_conformal: list[float] = [] # create a list to store the scores\n",
+    "\terror_rates: list[float] = [] # create a list to store the error rates\n",
+    "\tamplitudes: list[float] = [] # create a list to store the amplitudes\n",
+    "\t\n",
+    "\tfor alpha in alpha_values: # loop through the values of alpha, to find the best one\n",
+    "\t\tlasso_model = Lasso(alpha=alpha).fit(X_train_pr_scaled, y_train_pr) # build the model with the best parameters\n",
+    "\t\tc, test_error, amplitude = conformal(X_val_scaled, y_val, X_test_scaled, y_test, significance_level)\n",
+    "\t\tscores_conformal.append(test_error) # store the score\n",
+    "\t\terror_rates.append(test_error)\n",
+    "\t\tamplitudes.append(amplitude)\n",
+    "\n",
+    "\tbest_score_conformal: float = min(scores_conformal) # find the best score\n",
+    "\talpha_optimal_conformal: float = alpha_values[scores_conformal.index(best_score_conformal)] # find the best alpha\n",
+    "\treturn alpha_optimal_conformal, best_score_conformal, c, error_rates, amplitudes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Computation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5% Significance Level"
    ]
   },
   {
@@ -1687,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -1706,15 +1759,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Validating using `Lasso`"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -1722,28 +1768,26 @@
      "output_type": "stream",
      "text": [
       "Error Rate: 0.10810810810810811\n",
-      "Amplitude (Length of Interval): 10.099999999999971\n"
+      "Amplitude (Length of Interval): 142.20663070135626\n"
      ]
     }
    ],
    "source": [
-    "alpha_optimal_conformal, best_score_conformal, c = cross_validation_optimal_alpha()\n",
-    "lasso_model = Lasso(alpha=alpha_optimal_conformal).fit(X_train_pr_scaled, y_train_pr) # build the model with the best parameters\n",
-    "c, test_error, amplitude = conformal(X_val_scaled, y_val, X_test_scaled, y_test, 0.05)\n",
-    "print(f\"Error Rate: {test_error}\")\n",
-    "print(f\"Amplitude (Length of Interval): {np.mean(amplitude)}\")"
+    "alpha_optimal_conformal, best_score_conformal, c, error_rates, amplitudes = cross_validation_conformal(0.05)\n",
+    "print(f\"Error Rate: {best_score_conformal}\")\n",
+    "print(f\"Amplitude (Length of Interval): {np.mean(amplitudes)}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 20%"
+    "#### 20% Significance Level"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -1771,16 +1815,14 @@
      "output_type": "stream",
      "text": [
       "Error Rate: 0.10810810810810811\n",
-      "Amplitude (Length of Interval): 10.099999999999971\n"
+      "Amplitude (Length of Interval): 142.20663070135626\n"
      ]
     }
    ],
    "source": [
-    "alpha_optimal_conformal, best_score_conformal, c = cross_validation_optimal_alpha()\n",
-    "lasso_model = Lasso(alpha=alpha_optimal_conformal).fit(X_train_pr_scaled, y_train_pr) # build the model with the best parameters\n",
-    "c, test_error, amplitude = conformal(X_val_scaled, y_val, X_test_scaled, y_test, 0.2)\n",
-    "print(f\"Error Rate: {test_error}\")\n",
-    "print(f\"Amplitude (Length of Interval): {np.mean(amplitude)}\")"
+    "alpha_optimal_conformal, best_score_conformal, c, error_rates, amplitudes = cross_validation_conformal(0.2)\n",
+    "print(f\"Error Rate: {best_score_conformal}\")\n",
+    "print(f\"Amplitude (Length of Interval): {np.mean(amplitudes)}\")"
    ]
   }
  ],
